--- a/port_peripherals/rp2/PioNeoPixel/package.json
+++ b/port_peripherals/rp2/PioNeoPixel/package.json
@@ -3,24 +3,17 @@
   "version": "1.0.0",
   "description": "A MicroPython library to PioNeoPixel",
   "author": "leeqingshui",
-  "author_email": "1069653183@qq.com",
-  "url": "https://github.com/FreakStudioCN/micropython-embedded",
+  "license": "MIT",
+  "chips": "all",
+  "fw": "all",
+  "_comments": {
+    "chips": "该包支持运行的芯片型号，all表示无芯片限制",
+    "fw": "该包依赖的特定固件如ulab、lvgl,all表示无固件依赖"
+  },
   "urls": [
-    ["ws2812_driver.py", "github:FreakStudioCN/micropython-embedded/port_peripherals/rp2/PioNeoPixel/code/ws2812_driver.py"]
-
-  ],
-  "deps": [
- ],
-  "long_description": "A MicroPython library to PioNeoPixel",
-  "long_description_content_type": "text/markdown",
-  "classifiers": [
-    "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.8",
-    "License :: Other/Proprietary License",
-    "Operating System :: OS Independent"
-  ],
-  "python_requires": ">=3.12",
-  "extras_require": {
-    "micropython": ["machine", "time"]
-  }
+    [
+      "ws2812_driver.py",
+      "code/ws2812_driver.py"
+    ]
+  ]
 }
